--- a/test/dune
+++ b/test/dune
@@ -6,4 +6,4 @@
 (test
  (name test_py_python_str_repr)
  (modules test_py_python_str_repr)
- (libraries python-str-repr alcotest py))
+ (libraries python-str-repr alcotest py qcheck qcheck-alcotest))
